// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list should be sum of AS 1`] = `
"<printHW3>
  <div>
    <HW3>
      <div>
        <button onClick={[Function: bound handleClick]}>
          <h1>
            add it
          </h1>
        </button>
        <h1>
          6
        </h1>
      </div>
    </HW3>
  </div>
</printHW3>"
`;

exports[`should HW3 1`] = `
<div>
  <div>
    <button
      onClick={[Function]}
    >
      <h1>
        add it
      </h1>
    </button>
    <h1>
      0
    </h1>
  </div>
</div>
`;
